k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: astemplate-redis-svc
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: astemplate-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astemplate-redis
spec:
  selector:
    matchLabels:
      app: astemplate-redis
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: astemplate-redis
    spec:
      containers:
        - name: redis
          image: redis:5.0-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 300m
              memory: 500Mi
          volumeMounts:
            - mountPath: /data
              name: astemplate-redis-data
      volumes:
        - name: astemplate-redis-data
          emptyDir: {}
