k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-template-stimulus-web-svc
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: rails-template-stimulus-web
