k8s/demo.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rails-template-stimulus-demo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  tls:
    - hosts:
        - example.com
      secretName: rails-template-stimulus-demo-tls
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              serviceName: rails-template-stimulus-demo-web-svc
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rails-template-stimulus-demo-web-svc
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: rails-template-stimulus-demo-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-template-stimulus-demo-web
spec:
  selector:
    matchLabels:
      app: rails-template-stimulus-demo-web
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: rails-template-stimulus-demo-web
    spec:
      containers:
        - name: app
          image: hashicorp/http-echo
          args:
            - "-listen=:3000"
            - "-text=Hello rails-template-stimulus"
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 5
            successThreshold: 2
            failureThreshold: 2
            timeoutSeconds: 5
        - name: nginx
          image: nginx:1.17-alpine
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            successThreshold: 2
            failureThreshold: 2
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-conf
              subPath: nginx.conf
              readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: rails-template-stimulus-demo-nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
