k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: astemplate-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  tls:
    - hosts:
        - example.com
      secretName: astemplate-tls
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              serviceName: astemplate-web-svc
              servicePort: 80
